2010-08-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* octet.el (octet-find-file)
	* w3m-form.el (w3m-fontify-textareas, w3m-form-replace)
	* w3m-proc.el (w3m-process-filter)
	* w3m-session.el (w3m-session-select-list-all-sessions)
	(w3m-session-select-list-session-group, w3m-session-select-next)
	* w3m.el (w3m-idle-images-show, w3m-toggle-inline-images-internal)
	(w3m-resize-inline-image-internal, w3m-fontify, w3m-refontify-anchor)
	(w3m-cache-remove-oldest, w3m-cache-remove, w3m-cache-contents)
	(w3m-cache-request-contents, w3m-create-text-page)
	(w3m-create-image-page, w3m-select-buffer-generate-contents)
	(w3m-select-buffer-recheck): Replace let-bindings of buffer-read-only
	to nil with inhibit-read-only to t.

2010-08-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-engine-alist): Fix `google news' url forms
	used to non-Japanese utf-8 environments.

	* w3m.el (w3m-entity-table): Add table for "&#149;".
	(w3m-entity-value): Prefer "&#NUM;" type entities specified in
	w3m-entity-table.

2010-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-safe-view-this-url): Never query "Are you sure..." if
	prefix arg is given.

2010-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-create-text-page): Make point and window start be the
	start of contents, especially for text/plain pages.

2010-08-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-relationship-estimate-rules): Update regexps for Google.

2010-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Autoload w3m-bookmark-add.

	* w3m-lnum.el (w3m-read-int-interactive): Ignore mouse event in XEmacs.

2010-07-29  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m.el (autoload, w3m-linknum-map):
	`w3m-linknum-bookmark-add-this-url', `w3m-linknum-zoom-in-image'
	and `w3m-linknum-zoom-out-image' added.

	* w3m-lnum.el (w3m-link-numbering-mode-map):
	`w3m-linknum-bookmark-add-this-url', `w3m-linknum-zoom-in-image'
	and `w3m-linknum-zoom-out-image' added.